# CPP_sportegyesulet

./: CMakeLists.txt  Csapat.cpp  Csapat.h  Egyesulet.cpp  Egyesulet.h  Kezilabda.cpp  Kezilabda.h  Kosarlabda.cpp  Kosarlabda.h  Labdarugas.cpp  Labdarugas.h  README.md  Specifikáció.docx  SportAg.cpp  SportAg.h  adat.txt  main.cpp
